# log-checker

./: README.md  get-check-log.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: test-installer.yml
src/check_log/: __init__.py  __main__.py  cli.py  config.py  engine.py  intelligence.py  reporting.py  utils.py  web.py
src/check_log.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
